styles/portfolio.css
:root {
  --light-color: #f9fcfc;
  --dark-color: #2c2d34;
  --primary-color: #fb413b;
  --secondary-color: #a0d3a6;
  --heading-font-family: "Merriweather", serif;
  --sub-heading-family: "Overpass", sans-serif;
  --default-font-family: "Heebo", sans-serif;
}

body {
  color: var(--dark-color);
  font-family: var(--default-font-family);
  font-size: 16px;
  line-height: 26px;
}

h1 {
  font-family: var(--heading-font-family);
  font-size: 60px;
  line-height: 70px;
}

h2 {
  font-family: var(--sub-heading-family);
  font-size: 20px;
  line-height: 30px;
}

h3 {
  font-family: var(--sub-heading-family);
  font-size: 50px;
  line-height: 60px;
}

p {
  opacity: 70%;
}

hr {
  width: 25%;
  margin: 0 auto;
  display: block;
  padding: 10px;
  color: var(--primary-color);
}

.hero {
  background-color: var(--light-color);
  margin-bottom: 50px;
  padding: 300px;
  text-align: center;
}

.hero h1 {
  font-size: 90px;
  line-height: 100px;
}
.hero h2,
.hero p {
  font-size: 24px;
  line-height: 40px;
  opacity: 100%;
}

.btn-primary {
  background-color: var(--primary-color);
  border: none;
  color: #f9fcfc;
  border-radius: 4px;
  padding: 18px 20px;
  margin-top: 10px;
  font-size: 16px;
  line-height: 30px;
}

:hover.btn-primary {
  background-color: var(--light-color);
  color: var(--primary-color);
  border: solid thin var(--primary-color);
}

:hover.btn-secondary {
  background-color: var(--light-color);
  color: var(--secondary-color);
  border: solid thin var(--secondary-color);
}

.btn-secondary {
  background-color: var(--secondary-color);
  border: none;
  color: #f9fcfc;
  border-radius: 4px;
  padding: 18px 20px;
  margin-top: 10px;
  font-size: 16px;
  line-height: 30px;
}

.project-description {
  margin-left: 20px;
  margin-right: 20px;
}

.project-description p {
  opacity: 65%;
}

.content {
  padding: 40px;
}

.container {
  padding: 75px;
}

@media (max-width: 920px) {
  h1 {
    font-size: 45px;
    line-height: 50px;
  }

  h2 {
    font-size: 35px;
  }

  p {
    font-size: 14px;
    line-height: 20px;
  }

  .btn-primary,
  .btn-secondary {
    padding: 10px 15px;
  }

  .project-description {
    text-align: center;
  }

  .hero {
    padding: 100px;
  }

  .hero h2,
  .hero p {
    font-size: 20px;
    line-height: 30px;
  }
  .content {
    text-align: center;
  }
  .content h1 {
    font-size: 45px;
    line-height: 50px;
  }

  .content h2 {
    font-size: 20px;
    line-height: 30px;
  }

  .content p {
    font-size: 14px;
    line-height: 20px;
  }
}

